[tool.black]
line-length = 99

# includes the data_sources files
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["modules"]
namespaces = true
exclude = ["tests*"]

[project]
name = "ngiab_data_preprocess"
#version = "0.0.1"
dynamic = ["version"]
authors = [{ name = "Josh Cunningham", email = "josh.cu@gmail.com" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyarrow==15.0.2",
    "PyYAML==6.0.1",
    "pyogrio==0.7.2",
    "pyproj==3.6.1",
    "Flask==3.0.2",
    "Flask-Cors==4.0.0",
    "geopandas==0.14.3",
    "requests==2.32.2",
    "igraph==0.11.4",
    "s3fs==2024.3.1",
    "xarray==2024.2.0",
    "rioxarray==0.15.1",
    "zarr==2.17.1",
    "netCDF4==1.6.5",
    "dask==2024.4.1",
    "dask[distributed]==2024.4.1",
    "black==24.3.0",
    "isort==5.13.2",
    "h5netcdf==1.3.0",
    "numba==0.59.1",
    "exactextract==0.2.0.dev0",
    "numpy==1.26.4",
    "flaskwebgui==1.1.0",
    "tqdm==4.66.4",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
# scm adds files tracked by git to the package
requires = ["setuptools>=69.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"
