[tool.black]
line-length = 99

# includes the data_sources files
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["modules"]
namespaces = true
exclude = ["tests*"]

[project]
name = "ngiab_data_preprocess"
#version = "0.0.1"
dynamic = ["version"]
authors = [{ name = "Josh Cunningham", email = "jcunningham8@ua.edu" }]
description = "Graphical Tools for creating Next Gen Water model input data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyproj",
    "Flask",
    "geopandas>=1.0.0",
    "requests",
    "igraph",
    "s3fs",
    "xarray",
    "zarr",
    "dask",
    "dask[distributed]",
    "h5netcdf",
    "exactextract==0.2.0",
    "numpy",
    "tqdm",
    "rich",
    "colorama",
    "boto3",
    "numcodecs<0.16.0",
]

[project.optional-dependencies]
eval = ["ngiab_eval"]
plot = ["ngiab_eval[plot]"]
dev = ["ngiab_eval[plot]","bokeh"]

[project.urls]
Homepage = "https://github.com/CIROH-UA/NGIAB_data_preprocess"
Issues = "https://github.com/CIROH-UA/NGIAB_data_preprocess/issues"

[project.scripts]
cli = "ngiab_data_cli.__main__:main"
map_app = "map_app.__main__:main"
forcings = "ngiab_data_cli.forcing_cli:main"

[build-system]
# scm adds files tracked by git to the package
requires = ["setuptools>=69.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"
